--- a/src/tokens/font.yml
+++ b/src/tokens/font.yml
@@ -9,14 +9,17 @@ props:
     value: '"azo-sans-web",sans-serif'
     class: 'heading'
     weights: '500'
+    order: -1
   font_text:
     value: '"roboto",sans-serif'
     class: 'body'
     weights: '300,400,500'
+    order: -1
   font_mono:
     value: '"roboto-mono",monospace'
     class: 'mono'
     weights: '400'
+    order: -1
 
 global:
   type: ...
