--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,10 @@
       "error",
       2
     ],
+    "no-trailing-spaces": [
+      "error",
+      { "skipBlankLines": true },
+    ],
     "vue/no-unused-vars": "error",
     "comma-dangle": [
       "error",
@@ -49,7 +53,7 @@
   },
   "parserOptions": {
     "sourceType": "module",
-    "ecmaVersion": 8,
+    "ecmaVersion": 2018,
     "ecmaFeatures": {
       "jsx": true
     }
