--- a/src/tokens/color.yml
+++ b/src/tokens/color.yml
@@ -8,12 +8,6 @@
 #
 
 props:
-  color_brand:
-    value: '#6464dc'
-    category: 'color-basic'
-    tags: 'Primary'
-    description: 'Swayable brand'
-    order: 0
   color_light:
     value: '#f7f7f8'
     category: 'color-basic'
@@ -25,6 +19,11 @@ props:
     category: 'color-basic'
     tags: 'Basic'
     description: 'Headings; Navbar background'
+    order: 0
+  color_darker: 
+    value: '#192026'
+    category: 'color-basic'
+    tags: 'Basic'
     order: 0
   color_white:
     value: '#ffffff'
@@ -93,16 +92,17 @@ props:
     value: '#6464dc'
     category: 'color-primary'
     tags: 'Primary'
+    description: 'Swayable Brand'
     order: 1
   color_blue_fade:
     value: '#CECEDD'
     category: 'color-primary-fade'
-    tags: 'Primary alt,Light'
+    tags: 'Primary alt,Fade'
     order: 1
   color_blue_burn:
     value: '#444B61'
     category: 'color-primary-burn'
-    tags: 'Primary alt,Dark'
+    tags: 'Primary alt,Burn'
     order: 1
 
   color_magenta:
@@ -113,12 +113,12 @@ props:
   color_magenta_fade:
     value: '#D9CBD9'
     category: 'color-primary-fade'
-    tags: 'Primary alt,Light'
+    tags: 'Primary alt,Fade'
     order: 2
   color_magenta_burn:
     value: '#51485F'
     category: 'color-primary-burn'
-    tags: 'Primary alt,Dark'
+    tags: 'Primary alt,Burn'
     order: 2
 
   color_pink:
@@ -129,12 +129,12 @@ props:
   color_pink_fade:
     value: '#E4CBD6' 
     category: 'color-primary-fade'
-    tags: 'Primary alt,Light'
+    tags: 'Primary alt,Fade'
     order: 3
   color_pink_burn:
     value: '#5B485D'
     category: 'color-primary-burn'
-    tags: 'Primary alt,Dark'
+    tags: 'Primary alt,Burn'
     order: 3
 
   color_red:
@@ -145,12 +145,12 @@ props:
   color_red_fade:
     value: '#E4CFCD' 
     category: 'color-primary-fade'
-    tags: 'Primary alt,Light'
+    tags: 'Primary alt,Fade'
     order: 4
   color_red_burn:
     value: '#5A4C55'
     category: 'color-primary-burn'
-    tags: 'Primary alt,Dark'
+    tags: 'Primary alt,Burn'
     order: 4
 
   color_orange:
@@ -161,12 +161,12 @@ props:
   color_orange_fade:
     value: '#E2D9C5' 
     category: 'color-primary-fade'
-    tags: 'Primary alt,Light'
+    tags: 'Primary alt,Fade'
     order: 5
   color_orange_burn:
     value: '#595450'
     category: 'color-primary-burn'
-    tags: 'Primary alt,Dark'
+    tags: 'Primary alt,Burn'
     order: 5
 
   color_yellow:
@@ -177,12 +177,12 @@ props:
   color_yellow_fade:
     value: '#DFE0C8' 
     category: 'color-primary-fade'
-    tags: 'Primary alt,Light'
+    tags: 'Primary alt,Fade'
     order: 6
   color_yellow_burn:
     value: '#545A53'
     category: 'color-primary-burn'
-    tags: 'Primary alt,Dark'
+    tags: 'Primary alt,Burn'
     order: 6
 
   color_green:
@@ -193,12 +193,12 @@ props:
   color_green_fade:
     value: '#D3DFCF'
     category: 'color-primary-fade'
-    tags: 'Primary alt,Light'
+    tags: 'Primary alt,Fade'
     order: 7
   color_green_burn:
     value: '#465A58'
     category: 'color-primary-burn'
-    tags: 'Primary alt,Dark'
+    tags: 'Primary alt,Burn'
     order: 7
 
   color_cyan:
@@ -209,12 +209,12 @@ props:
   color_cyan_fade:
     value: '#CADFE0'
     category: 'color-primary-fade'
-    tags: 'Primary alt,Light'
+    tags: 'Primary alt,Fade'
     order: 8
   color_cyan_burn:
     value: '#405A64'
     category: 'color-primary-burn'
-    tags: 'Primary alt,Dark'
+    tags: 'Primary alt,Burn'
     order: 8
 
   color_azure:
@@ -225,12 +225,12 @@ props:
   color_azure_fade:
     value: '#CCD5E2'
     category: 'color-primary-fade'
-    tags: 'Primary alt,Light'
+    tags: 'Primary alt,Fade'
     order: 9
   color_azure_burn:
     value: '#415265'
     category: 'color-primary-burn'
-    tags: 'Primary alt,Dark'
+    tags: 'Primary alt,Burn'
     order: 9
   
   color_purple:
@@ -241,12 +241,12 @@ props:
   color_purple_fade:
     value: '#D3CCDB'
     category: 'color-secondary-fade'
-    tags: 'Secondary faded,Light'
+    tags: 'Secondary alt,Fade'
     order: 10
   color_purple_burn:
     value: '#4A4A60'
     category: 'color-secondary-burn'
-    tags: 'Secondary faded,Dark'
+    tags: 'Secondary alt,Burn'
     order: 10
 
   color_rose_dark:
@@ -257,12 +257,12 @@ props:
   color_rose_dark_fade:
     value: '#E0C8D6'
     category: 'color-secondary-fade'
-    tags: 'Secondary faded,Light'
+    tags: 'Secondary alt,Fade'
     order: 11
   color_rose_dark_burn:
     value: '#58465E'
     category: 'color-secondary-burn'
-    tags: 'Secondary faded,Dark'
+    tags: 'Secondary alt,Burn'
     order: 11
 
   color_red_dark:
@@ -273,12 +273,12 @@ props:
   color_red_dark_fade:
     value: '#E4CCCD'
     category: 'color-secondary-fade'
-    tags: 'Secondary faded,Light'
+    tags: 'Secondary alt,Fade'
     order: 12
   color_red_dark_burn:
     value: '#5B4A55'
     category: 'color-secondary-burn'
-    tags: 'Secondary faded,Dark'
+    tags: 'Secondary alt,Burn'
     order: 12
 
   color_orange_dark:
@@ -289,12 +289,12 @@ props:
   color_orange_dark_fade:
     value: '#E3D4C8'
     category: 'color-secondary-fade'
-    tags: 'Secondary faded,Light'
+    tags: 'Secondary alt,Fade'
     order: 13
   color_orange_dark_burn:
     value: '#5A5051'
     category: 'color-secondary-burn'
-    tags: 'Secondary faded,Dark'
+    tags: 'Secondary alt,Burn'
     order: 13
 
   color_orange_light:
@@ -305,12 +305,12 @@ props:
   color_orange_light_fade:
     value: '#E3DDC6'
     category: 'color-secondary-fade'
-    tags: 'Secondary faded,Light'
+    tags: 'Secondary alt,Fade'
     order: 14
   color_orange_light_burn:
     value: '#585751'
     category: 'color-secondary-burn'
-    tags: 'Secondary faded,Dark'
+    tags: 'Secondary alt,Burn'
     order: 14
 
   color_green_light:
@@ -321,12 +321,12 @@ props:
   color_green_light_fade:
     value: '#D9E0C9'
     category: 'color-secondary-fade'
-    tags: 'Secondary faded,Light'
+    tags: 'Secondary alt,Fade'
     order: 15
   color_green_light_burn:
     value: '#4D5B53'
     category: 'color-secondary-burn'
-    tags: 'Secondary faded,Dark'
+    tags: 'Secondary alt,Burn'
     order: 15
 
   color_green_dark:
@@ -337,12 +337,12 @@ props:
   color_green_dark_fade:
     value: '#CFDFD6'
     category: 'color-secondary-fade'
-    tags: 'Secondary faded,Light'
+    tags: 'Secondary alt,Fade'
     order: 16
   color_green_dark_burn:
     value: '#425A5C'
     category: 'color-secondary-burn'
-    tags: 'Secondary faded,Dark'
+    tags: 'Secondary alt,Burn'
     order: 16
 
   color_azure_light:
@@ -353,12 +353,12 @@ props:
   color_azure_light_fade:
     value: '#CAD9E5'
     category: 'color-secondary-fade'
-    tags: 'Secondary faded,Light'
+    tags: 'Secondary alt,Fade'
     order: 17
   color_azure_light_burn:
     value: '#405567'
     category: 'color-secondary-burn'
-    tags: 'Secondary faded,Dark'
+    tags: 'Secondary alt,Burn'
     order: 17
 
   color_azure_dark:
@@ -369,12 +369,12 @@ props:
   color_azure_dark_fade:
     value: '#CDD1DF'
     category: 'color-secondary-fade'
-    tags: 'Secondary faded,Light'
+    tags: 'Secondary alt,Fade'
     order: 18
   color_azure_dark_burn:
     value: '#424E63'
     category: 'color-secondary-burn'
-    tags: 'Secondary faded,Dark'
+    tags: 'Secondary alt,Burn'
     order: 18
   
 global:
