--- a/src/tokens/color.yml
+++ b/src/tokens/color.yml
@@ -8,374 +8,110 @@
 #
 
 props:
-  color_light:
-    value: '#f7f7f8'
-    category: 'color-basic'
-    tags: 'Basic'
-    description: 'Background'
-    order: 0
-  color_dark: 
-    value: '#263340'
-    category: 'color-basic'
-    tags: 'Basic'
-    description: 'Headings; Navbar background'
-    order: 0
-  color_darker: 
-    value: '#192026'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 0
-  color_white:
-    value: '#ffffff'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 0
-  color_grey:
-    value: '#9E9F9E'
-    category: 'color-basic'
-    tags: 'Basic'
-    description: 'Nav items'
-    order: 0
-  color_black: 
-    value: '#0D0D0D'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 0
-
-  color_grey_100: 
-    value: '#F2F2F2'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 100
-  color_grey_200: 
-    value: '#D9D9D9'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 100
-  color_grey_300: 
-    value: '#BFBFBF'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 100
-  color_grey_400: 
-    value: '#A7A7A7'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 100
-  color_grey_500: 
-    value: '#8C8C8C'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 100
-  color_grey_600: 
-    value: '#737373'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 100
-  color_grey_700: 
-    value: '#595959'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 100
-  color_grey_800: 
-    value: '#404040'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 100
-  color_grey_900: 
-    value: '#262626'
-    category: 'color-basic'
-    tags: 'Basic'
-    order: 100
-
   color_blue:
     value: '#6464dc'
     category: 'color-primary'
-    tags: 'Primary'
-    description: 'Swayable Brand'
     order: 1
-  color_blue_fade:
-    value: '#CECEDD'
-    category: 'color-primary-fade'
-    tags: 'Primary alt,Fade'
-    order: 1
-  color_blue_burn:
-    value: '#444B61'
-    category: 'color-primary-burn'
-    tags: 'Primary alt,Burn'
-    order: 1
-
   color_magenta:
     value: '#b43cb4'
     category: 'color-primary'
-    tags: 'Primary'
     order: 2
-  color_magenta_fade:
-    value: '#D9CBD9'
-    category: 'color-primary-fade'
-    tags: 'Primary alt,Fade'
-    order: 2
-  color_magenta_burn:
-    value: '#51485F'
-    category: 'color-primary-burn'
-    tags: 'Primary alt,Burn'
-    order: 2
-
   color_pink:
     value: '#dc3c8c'
     category: 'color-primary'
-    tags: 'Primary'
     order: 3
-  color_pink_fade:
-    value: '#E4CBD6' 
-    category: 'color-primary-fade'
-    tags: 'Primary alt,Fade'
-    order: 3
-  color_pink_burn:
-    value: '#5B485D'
-    category: 'color-primary-burn'
-    tags: 'Primary alt,Burn'
-    order: 3
-
   color_red:
     value: '#dc6464'
     category: 'color-primary'
-    tags: 'Primary'
     order: 4
-  color_red_fade:
-    value: '#E4CFCD' 
-    category: 'color-primary-fade'
-    tags: 'Primary alt,Fade'
-    order: 4
-  color_red_burn:
-    value: '#5A4C55'
-    category: 'color-primary-burn'
-    tags: 'Primary alt,Burn'
-    order: 4
-
   color_orange:
     value: '#dca028'
     category: 'color-primary'
-    tags: 'Primary'
     order: 5
-  color_orange_fade:
-    value: '#E2D9C5' 
-    category: 'color-primary-fade'
-    tags: 'Primary alt,Fade'
-    order: 5
-  color_orange_burn:
-    value: '#595450'
-    category: 'color-primary-burn'
-    tags: 'Primary alt,Burn'
-    order: 5
-
   color_yellow:
     value: '#c8c814'
     category: 'color-primary'
-    tags: 'Primary'
     order: 6
-  color_yellow_fade:
-    value: '#DFE0C8' 
-    category: 'color-primary-fade'
-    tags: 'Primary alt,Fade'
-    order: 6
-  color_yellow_burn:
-    value: '#545A53'
-    category: 'color-primary-burn'
-    tags: 'Primary alt,Burn'
-    order: 6
-
   color_green:
     value: '#78c864'
     category: 'color-primary'
-    tags: 'Primary'
     order: 7
-  color_green_fade:
-    value: '#D3DFCF'
-    category: 'color-primary-fade'
-    tags: 'Primary alt,Fade'
-    order: 7
-  color_green_burn:
-    value: '#465A58'
-    category: 'color-primary-burn'
-    tags: 'Primary alt,Burn'
-    order: 7
-
   color_cyan:
     value: '#14c8c8'
     category: 'color-primary'
-    tags: 'Primary'
     order: 8
-  color_cyan_fade:
-    value: '#CADFE0'
-    category: 'color-primary-fade'
-    tags: 'Primary alt,Fade'
-    order: 8
-  color_cyan_burn:
-    value: '#405A64'
-    category: 'color-primary-burn'
-    tags: 'Primary alt,Burn'
-    order: 8
-
   color_azure:
     value: '#3c8cdc'
     category: 'color-primary'
-    tags: 'Primary'
     order: 9
-  color_azure_fade:
-    value: '#CCD5E2'
-    category: 'color-primary-fade'
-    tags: 'Primary alt,Fade'
-    order: 9
-  color_azure_burn:
-    value: '#415265'
-    category: 'color-primary-burn'
-    tags: 'Primary alt,Burn'
-    order: 9
-  
-  color_purple:
-    value: '#8c50c8'
-    category: 'color-secondary'
-    tags: 'Secondary'
-    order: 10
-  color_purple_fade:
-    value: '#D3CCDB'
-    category: 'color-secondary-fade'
-    tags: 'Secondary alt,Fade'
-    order: 10
-  color_purple_burn:
-    value: '#4A4A60'
-    category: 'color-secondary-burn'
-    tags: 'Secondary alt,Burn'
-    order: 10
-
-  color_rose_dark:
-    value: '#c8288c'
-    category: 'color-secondary'
-    tags: 'Secondary'
-    order: 11
-  color_rose_dark_fade:
-    value: '#E0C8D6'
-    category: 'color-secondary-fade'
-    tags: 'Secondary alt,Fade'
-    order: 11
-  color_rose_dark_burn:
-    value: '#58465E'
-    category: 'color-secondary-burn'
-    tags: 'Secondary alt,Burn'
-    order: 11
-
-  color_red_dark:
-    value: '#dc5064'
-    category: 'color-secondary'
-    tags: 'Secondary'
-    order: 12
-  color_red_dark_fade:
-    value: '#E4CCCD'
-    category: 'color-secondary-fade'
-    tags: 'Secondary alt,Fade'
-    order: 12
-  color_red_dark_burn:
-    value: '#5B4A55'
-    category: 'color-secondary-burn'
-    tags: 'Secondary alt,Burn'
-    order: 12
-
-  color_orange_dark:
-    value: '#dc8246'
-    category: 'color-secondary'
-    tags: 'Secondary'
-    order: 13
-  color_orange_dark_fade:
-    value: '#E3D4C8'
-    category: 'color-secondary-fade'
-    tags: 'Secondary alt,Fade'
-    order: 13
-  color_orange_dark_burn:
-    value: '#5A5051'
-    category: 'color-secondary-burn'
-    tags: 'Secondary alt,Burn'
-    order: 13
-
-  color_orange_light:
-    value: '#dcb414'
-    category: 'color-secondary'
-    tags: 'Secondary'
-    order: 14
-  color_orange_light_fade:
-    value: '#E3DDC6'
-    category: 'color-secondary-fade'
-    tags: 'Secondary alt,Fade'
-    order: 14
-  color_orange_light_burn:
-    value: '#585751'
-    category: 'color-secondary-burn'
-    tags: 'Secondary alt,Burn'
-    order: 14
-
-  color_green_light:
-    value: '#a0c83c'
-    category: 'color-secondary'
-    tags: 'Secondary'
-    order: 15
-  color_green_light_fade:
-    value: '#D9E0C9'
-    category: 'color-secondary-fade'
-    tags: 'Secondary alt,Fade'
-    order: 15
-  color_green_light_burn:
-    value: '#4D5B53'
-    category: 'color-secondary-burn'
-    tags: 'Secondary alt,Burn'
-    order: 15
-
-  color_green_dark:
-    value: '#50c88c'
-    category: 'color-secondary'
-    tags: 'Secondary'
-    order: 16
-  color_green_dark_fade:
-    value: '#CFDFD6'
-    category: 'color-secondary-fade'
-    tags: 'Secondary alt,Fade'
-    order: 16
-  color_green_dark_burn:
-    value: '#425A5C'
-    category: 'color-secondary-burn'
-    tags: 'Secondary alt,Burn'
-    order: 16
-
-  color_azure_light:
-    value: '#28a0dc'
-    category: 'color-secondary'
-    tags: 'Secondary'
-    order: 17
-  color_azure_light_fade:
-    value: '#CAD9E5'
-    category: 'color-secondary-fade'
-    tags: 'Secondary alt,Fade'
-    order: 17
-  color_azure_light_burn:
-    value: '#405567'
-    category: 'color-secondary-burn'
-    tags: 'Secondary alt,Burn'
-    order: 17
-
   color_azure_dark:
     value: '#5078dc'
     category: 'color-secondary'
-    tags: 'Secondary'
+    order: 10
+  color_purple:
+    value: '#8c50c8'
+    category: 'color-secondary'
+    order: 11
+  color_rose_dark:
+    value: '#c8288c'
+    category: 'color-secondary'
+    order: 12
+  color_red_dark:
+    value: '#dc5064'
+    category: 'color-secondary'
+    order: 13
+  color_orange_dark:
+    value: '#dc8246'
+    category: 'color-secondary'
+    order: 14
+  color_orange_light:
+    value: '#dcb414'
+    category: 'color-secondary'
+    order: 15
+  color_green_light:
+    value: '#a0c83c'
+    category: 'color-secondary'
+    order: 16
+  color_green_dark:
+    value: '#50c88c'
+    category: 'color-secondary'
+    order: 17
+  color_azure_light:
+    value: '#28a0dc'
+    category: 'color-secondary'
     order: 18
-  color_azure_dark_fade:
-    value: '#CDD1DF'
-    category: 'color-secondary-fade'
-    tags: 'Secondary alt,Fade'
-    order: 18
-  color_azure_dark_burn:
-    value: '#424E63'
-    category: 'color-secondary-burn'
-    tags: 'Secondary alt,Burn'
-    order: 18
+  color_blue_dark: 
+    value: '#283040'
+    category: 'color-basic'
+    order: 19
+  color_grey_darker: 
+    value: '#999A9D'
+    category: 'color-basic'
+    order: 20
+  color_grey_dark: 
+    value: '#CCCDD0'
+    category: 'color-basic'
+    order: 21
+  color_grey: 
+    value: '#DDDEE1'
+    category: 'color-basic'
+    order: 22
+  color_grey_light: 
+    value: '#EAEBEE'
+    category: 'color-basic'
+    order: 23
+  color_grey_lighter: 
+    value: '#F6F7FA'
+    category: 'color-basic'
+    order: 24
+  color_white:
+    value: '#ffffff'
+    category: 'color-basic'
+    order: 25
+  color_black: 
+    value: '#000000'
+    category: 'color-basic'
+    order: 26
   
 global:
   type: color
