--- a/src/tokens/font.yml
+++ b/src/tokens/font.yml
@@ -6,19 +6,19 @@
 
 props:
   font_heading:
-    value: '"azo-sans-web",sans-serif'
+    value: '"acumin-pro",sans-serif'
     class: 'heading'
-    weights: '300,400,500,700'
+    weights: '400,600'
     order: -1
-  font_text:
-    value: '"roboto",sans-serif'
+  font_body:
+    value: '"acumin-pro",sans-serif'
     class: 'body'
-    weights: '300,400,500,700'
+    weights: '400,600'
     order: -1
   font_mono:
-    value: '"roboto-mono",monospace'
+    value: '"din-2014",monospace'
     class: 'mono'
-    weights: '300,400'
+    weights: '400,600'
     order: -1
 
 global:
