--- a/package.json
+++ b/package.json
@@ -74,12 +74,13 @@
     }
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.1.3",
     "lodash": "^4.17.15",
     "postcss-color-mod-function": "^3.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-url": "^8.0.0",
-    "tailwindcss": "^1.0.5",
+    "tailwindcss": "^1.2.0",
     "vue": "^2.6.10",
     "vue-meta": "^1.5.6",
     "vue-router": "^3.0.2",
@@ -105,8 +106,8 @@
     "chalk": "^2.4.1",
     "codemirror": "^5.42.0",
     "commitizen": "^4.0.3",
-    "compression-webpack-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^4.6.0",
+    "compression-webpack-plugin": "^3.1.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^1.0.1",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.9.0",
@@ -124,7 +125,7 @@
     "jest-serializer-vue": "^2.0.2",
     "mini-css-extract-plugin": "^0.4.5",
     "node-notifier": "^5.3.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "onchange": "^5.1.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -145,7 +146,7 @@
     "vue-jest": "^3.0.1",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
-    "vue-styleguidist": "^3.16.3",
+    "vue-styleguidist": "^4.13.1",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.26.1",
     "webpack-bundle-analyzer": "^3.3.2",
