--- a/src/tokens/font-size.yml
+++ b/src/tokens/font-size.yml
@@ -3,36 +3,30 @@
 #
 
 props:
-  size_6xl:
-    token: "6xl"
-    value: "4rem"
-  size_5xl:
-    token: "5xl"
-    value: "3rem"
   size_4xl:
     token: "4xl"
-    value: "2.25rem"
+    value: "3rem"
   size_3xl:
     token: "3xl"
-    value: "1.875rem"
+    value: "1.5rem"
   size_2xl:
     token: "2xl"
-    value: "1.5rem"
+    value: "1.125rem"
   size_xl:
     token: "xl"
-    value: "1.25rem"
+    value: "1rem"
   size_lg:
     token: "lg"
-    value: "1.125rem"
-  size_base:
-    token: "base"
-    value: "1rem"
+    value: "0.875rem"
+  size_md:
+    token: "md"
+    value: "0.75rem"
   size_sm:
     token: "sm"
-    value: "0.875rem"
+    value: "0.688rem"
   size_xs:
     token: "xs"
-    value: "0.75rem"
+    value: "0.625rem"
 global:
   type: number
   category: font-size
