--- a/.eslintrc
+++ b/.eslintrc
@@ -53,6 +53,7 @@
     }]
   },
   "parserOptions": {
+    "parser": "babel-eslint",
     "sourceType": "module",
     "ecmaVersion": 2018,
     "ecmaFeatures": {
